Bug 1123062 - Fall back to looking at the tag for determining if an element is preformatted when there is no style information available. r=bzbarsky, a=lmandel